# libuecc

./: CHANGELOG  CMakeLists.txt  COPYRIGHT  Doxyfile.in  libuecc.pc.in
include/libuecc/: ecc.h
src/: CMakeLists.txt  ec25519.c  ec25519_gf.c  ec25519_secret.c
